--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,7 @@ allarr:[
  经过测试 你会发现 allarr[3] 是一个数组被循环后 我们绑定的 style="height:{{heightArrBom[index]}}rpx" 也成功的被渲染;
  
  PS:
- 但是你发现allarr[1] 是一个对象被循环后    我们缺拿不到heightArrBom数组里面的数据  
+ 但是你发现allarr[1] 是一个对象被循环后    我们却拿不到heightArrBom数组里面的数据  
  
  Why? 这真的是一个坑 浪费很长时间 记录一次
  
